test262: DataView with explicit undefined byteLength should be the same as it not being present https://bugs.webkit.org/show_bug.cgi?id=164453

Reviewed by Darin Adler.

JSTests:

* stress/dataview-construct.js: Added.
(assert):
(shouldThrow):
* test262.yaml:

Source/JavaScriptCore:

* runtime/JSGenericTypedArrayViewConstructorInlines.h:
(JSC::constructGenericTypedArrayView):
Handle the special case of DataView construction with an undefined byteLength value.

Canonical link: https://commits.webkit.org/182358@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@208640 268f45cc-cd09-0410-ab3c-d52691b4dbfc